# groky-desktop

./: .gitignore  HANDOFF.md  README.md  index.html  package-lock.json  package.json  suggestion-by-grok-06-24.md  vite.config.ts  vitest.config.ts
Groky Desktop GUI Client/: .thumbnail  Groky.dc.html
Groky Desktop GUI Client/_ds/acks-studio-design-system-1a9f091f-dd40-4c0c-839e-90b91fccf959/: README.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  (+1 more)
docs/: ARCHITECTURE.md  COMPONENTS.md  GETTING_STARTED.md  PRD.md  PREREQUISITES.md  ROADMAP.md  UI_UPDATE_PLAN.md
docs/audit/: AUDIT_FINAL.md  AUDIT_REPORT.md  CHANGELOG.md  FINAL_SUMMARY.md  P0_FIX_SUMMARY.md  P1_FIX_SUMMARY.md  PROFESSIONAL_AUDIT_REPORT.md  PROGRESS_REPORT.md  README.md  TODO.md
scripts/: check-rust.sh
src/: App.tsx  constants.ts  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  commands.rs  grok.rs  main.rs
src/components/: ApprovalModal.tsx  ChatPane.tsx  CommandPalette.tsx  Composer.tsx  DiffView.tsx  ErrorBoundary.tsx  FileTree.tsx  IconDock.tsx  MessageItem.tsx  ProjectPicker.tsx  StatusBar.tsx  SuggestedPrompts.tsx  TodoBlock.tsx  ToolCard.tsx  TopBar.tsx  WelcomeScreen.tsx
src/constants/: config.ts
src/services/: acpService.ts  exportSession.ts  logger.ts  secureStore.ts  tokenEstimate.ts  typeValidation.ts
src/stores/: appStore.ts  chatStore.ts  sessionStore.ts  settingsStore.ts
src/test/: setup.ts  stores.test.ts  typeValidation.test.ts
(+6 files in other folders)
